tests/paczka1/fuzzy1/97691278.err
Error in line 6: dA8wF S495 63,6
Error in line 5: QKB S49 47,4
Error in line 8: QKB S600 98,5
Error in line 21: kPxR0ILq9 S600 3,5
Error in line 22: dA8wF S600 7,0
Error in line 30: dA8wF S49 20,9
